--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div id="header" style="float:left">
         <h1>Gongning Luo    骆功宁</h1>
         <p> Associate Professor, Ph.D/Master Supervisor </p>
+		<!-- 综合楼的英文名没改 -->
         <p> Room 306, Manager Building, <br>
             School of Computer Science, <br>
 	    Harbin Institute of Technology, <br>
@@ -22,7 +23,7 @@
 	
         <p> <em> Email: <a href="mailto:luogongning@163.com">luogongning@163.com</a> </em> <em>
 	<p> <em> Wechat: <a href="">136 4744 9808</a> </em> </p>
-	<p> <ul> <em> <a href="./Tomystudents.html">  [Join us! 报考须知] </a> </em> <ul> </p>
+	
 		
 		<p> 
 		</p>
@@ -30,7 +31,7 @@
     </td>
     <td width="30%">
         <div id="photo" style="float:right;">
-        <img src="rongchang zhao.jpg" alt="my photo" style="width:216px;height:288px;"> 
+        <img src="luogongning.jpg" alt="my photo" style="width:260px;height:260px;"> 
         </div>
     </td>
     <td width="5%"></td>
@@ -45,7 +46,12 @@
         <hr>
         <div id="bio" class="contents">
         <h2>Short Bio</h2>
-         <p>I am now an Associate Professor and Ph.D./Master Supervisor at the School of Computer Science, at Central South University. Before that, I received my Ph.D. and bachelor's degrees from the Department of Electronic Information Science and Technology, Lanzhou University, China, in 2006 and 2011, respectively, with Prof. Yide Ma.  I achieved a postdoc position at the School of Information Science and Engineering, with Prof. Min Wu, in 2015. Currently, I work at Central South University as an associate professor, as well as work in Digital Imaging Group of London, Dept. of Medical Biophysics, University of Western Ontario, Canada as a postdoc. 
+         <p>I am now an Associate Professor and Ph.D./Master Supervisor at the School of Computer Science, at Harbin Institute of Technology. 
+			I completed my Bachelor’s degree in Software Engineering from East China Jiaotong University in 2012.
+			I then received my Master’s and Ph.D. degree in Computer Science and Technology at Harbin Institute of Technology in 2014 and 2019, respectively,
+			with Prof. Kuanquan Wang. During my doctoral studies, 
+			I was a joint Ph.D. student at Western University (2017-2018), mentored by Prof. Shuo Li. 
+			My research interests include Multimodal Medical Image Analysis and Artificial Intelligence Technology.
         </p>
 	 Learn more about me, please check my <a href="./Rongchang_cv.pdf" target="_blank">CV</a>. 
         <hr></div>
