--- a/index.html
+++ b/index.html
@@ -185,6 +185,61 @@
 				<br><span class="highlights">"EAdjacency-aware Fuzzy Label Learning for Skin Disease Diagnosis",IEEE Transactions on Fuzzy Systems,2025.</span>
 			</li>
 		</ul>
+		<hr/>
+
+		<h3>
+			<a id="Results" class="anchor" href="#Results" aria-hidden="true"><span
+					class="octicon octicon-link"></span></a> Results:
+					<a class="default-link" href="http://114.116.228.167/" target="_blank">Smart Medical Cloud Imaging Platform</a> 
+					</h3>
+		<ul>
+		<li>
+				<span class='title'>Heart Online Modeling Platform: Our team took the lead in developing the "Heart Online Modeling Platform" for CTA imaging data, 
+					which has already been promoted and applied in several affiliated hospitals of Harbin Medical University.</span>
+				<a class="code" href="http://114.116.228.167/cardiac/">[Link]</a>
+				<!-- <br><span class="highlights">&nbsp&nbsp&nbsp&nbsp"Early Detection of Dementia through Retinal Imaging and Trustworthy AI", npj Digital Medicine, 2024.</span> -->
+				<div class="platform-image">
+					<img src="./Img/result image/1.png" 
+						 alt="Heart Online Modeling Platform Screenshot" 
+						 style="width: 80%; 
+								max-width: 800px; 
+								margin: 10px 0;
+								border: 1px solid #ddd;
+								border-radius: 4px;">
+				</div>
+			</li>
+					
+		<li>
+				<span class='title'>COVID-19 Online Modeling and Quantitative Analysis Platform: 
+					The 24-hour real-time COVID-19 online modeling and quantitative analysis service platform has provided over 500 
+					services to Zhangjiajie People's Hospital and the First Affiliated Hospital of Harbin Medical University.</span>
+				<a class="code" href="http://114.116.228.167/covid">[Link]</a>
+				<div class="platform-image">
+					<img src="./Img/result image/2.png" 
+						 alt="COVID-19 Online Modeling and Quantitative Analysis Platform" 
+						 style="width: 80%; 
+								max-width: 800px; 
+								margin: 10px 0;
+								border: 1px solid #ddd;
+								border-radius: 4px;">
+				</div>
+			</li>
+		<li>
+				<span class='title'>Ventricular Function Index Pre-Evaluation System.</span>
+				<a class="code" href="http://114.116.228.167/ventricle">[Link]</a>
+
+			<div class="platform-image">
+			<img src="./Img/result image/3.png" 
+				 alt="Ventricular Function Index Pre-Evaluation System" 
+				 style="width: 80%; 
+						max-width: 800px; 
+						margin: 10px 0;
+						border: 1px solid #ddd;
+						border-radius: 4px;">
+		</div>
+	</li>
+		</ul>
+		
 
 		<hr/>
     <tr>
