--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 
 
 
-
+<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=CK6-9MXCGsb7jLVXsNWyVkhV3nwwjeDqpMxj_HvBYBo&cl=ffffff&w=a"></script>
 
 
 
