--- a/index.html
+++ b/index.html
@@ -311,9 +311,14 @@
 
 
 
-
+<tr>
+    <td width="5%"></td>
+    <td width="50%">
+    <div id="Viewing Stats" class="contents">
+    <h2>Viewing Stats</h2>
 <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=CK6-9MXCGsb7jLVXsNWyVkhV3nwwjeDqpMxj_HvBYBo&cl=ffffff&w=a"></script>
-
+</td>
+</tr>
 
 
 <!-- 更新日期 -->
