--- a/index.html
+++ b/index.html
@@ -307,20 +307,24 @@
 
 
 
-
 <tr>
     <td width="5%"></td>
     <td width="50%">
-    <div id="Viewing Stats" class="contents">
-    <h2>Viewing Stats</h2>
-		<p><table width="100%" border="0" align="center">					
-			<p> 
-				<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=CK6-9MXCGsb7jLVXsNWyVkhV3nwwjeDqpMxj_HvBYBo&cl=ffffff&w=a"></script>
-			</p>
-		</p>
-	</table>
-	</td>
-<hr/>
+        <div id="Viewing Stats" class="contents">
+            <h2>Viewing Stats</h2>
+            <table width="100%" border="0" align="center">					
+                <tr>
+                    <td>
+                        <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=CK6-9MXCGsb7jLVXsNWyVkhV3nwwjeDqpMxj_HvBYBo&cl=ffffff&w=a"></script>
+                    </td>
+                </tr>
+            </table>
+            <hr/>
+        </div>
+    </td>
+    <td width="5%"></td>
+</tr>
+
 
 
 
