--- a/index.html
+++ b/index.html
@@ -74,16 +74,12 @@
 		<a class="default-link" href="https://scholar.google.com/citations?user=xclGEuwAAAAJ&hl=en&oi=ao" target="_blank">Google Scholar Profile</a> for full publication list.
 		<h4>2025:</h4>
 			<p><table width="100%" border="0" align="center">					
-				<td width="30%">
-					<div id="photo" style="float:left;">
-					<img src="./Img/2025-01.png" alt="my photo" style="width:216px;height:134px;border:3 dashed #1E90EF;"> 
-					</div>
-				</td>		
+						
 				<td width="70%">
 					<p><b> Convergent–diffusion denoising model for multi-scenario CT image reconstruction. </b><br>
 							Xinghua Ma, Mingye Zou, Xinyan Fang,<U><b>Gongning Luo</U></b>, Wei Wang, Suyu Dong, Xiangyu Li, Kuanquan Wang, Qing Dong, Ye Tian, Shuo Li.
 					[<a href="https://www.sciencedirect.com/science/article/pii/S089561112400168X" target="_blank">paper</a>]
-					[<a href="./papers/2025-01.pdf" target="_blank">Download</a>] <br>
+					[<a href="https://www.sciencedirect.com/science/article/pii/S089561112400168X" target="_blank">code</a>] <br>
 					<em> Computerized Medical Imaging and Graphics, 2025. <b>(JCR Q1 with Impact Factor: 5.4)</b></em>
 				</td>
 			</table>
@@ -95,7 +91,7 @@
 				<p><b> Meta learning for mutant HLA class I epitope immunogenicity prediction to accelerate cancer clinical immunotherapy. </b><br>
 						Long Xu, Qiang Yang, Weihe Dong, Xiaokun Li, Kuanquan Wang, Suyu Dong, Xianyu Zhang, Tiansong Yang, <U><b>Gongning Luo*</U></b>, Xingyu Liao, Xin Gao, Guohua Wang.
 				[<a href="https://academic.oup.com/bib/article/26/1/bbae625/7916535" target="_blank">paper</a>]
-				[<a href="./papers/2025-02.pdf" target="_blank">Download</a>] <br>
+				[<a href="https://academic.oup.com/bib/article/26/1/bbae625/7916535" target="_blank">code</a>] <br>
 				<em> Briefings in Bioinformatics, 2025. <b>(JCR Q1 with Impact Factor: 6.8)</b></em>
 			</p>
 			</table>
@@ -108,7 +104,7 @@
 				<p><b> Adjacency-aware Fuzzy Label Learning for Skin Disease Diagnosis. </b><br>
 						Murong Zhou, Baifu Zuo, Guohua Wang, Gongning Luo, Fanding Li, Suyu Dong, Wei Wang, Kuanquan Wang, Xiangyu Li, Lifeng Xu.
 				[<a href="https://ieeexplore.ieee.org/abstract/document/10818707" target="_blank">paper</a>]
-				[<a href="./papers/2024-01.pdf" target="_blank">Download</a>] <br>
+				[<a href="./papers/2024-01.pdf" target="_blank">code</a>] <br>
 				<em> IEEE Transactions on Fuzzy Systems, 2024. <b>(JCR Q1 with Impact Factor: 5.4)</b></em>
 				</p>
 			</table>
@@ -120,7 +116,7 @@
 			<p><b> Adjacency-aware Fuzzy Label Learning for Skin Disease Diagnosis. </b><br>
 				Murong Zhou, Baifu Zuo, Guohua Wang, Gongning Luo, Fanding Li, Suyu Dong, Wei Wang, Kuanquan Wang, Xiangyu Li, Lifeng Xu.
 				[<a href="https://ieeexplore.ieee.org/abstract/document/10818707" target="_blank">paper</a>]
-				[<a href="./papers/2024-01.pdf" target="_blank">Download</a>] <br>
+				[<a href="https://ieeexplore.ieee.org/abstract/document/10818707" target="_blank">code</a>] <br>
 				<em> IEEE Transactions on Fuzzy Systems, 2024. <b>(JCR Q1 with Impact Factor: 5.4)</b></em>
 			</p>
 		</table>
@@ -132,7 +128,7 @@
 			<p><b> Anatomic-Constrained Medical Image Synthesis via Physiological Density Sampling. </b><br>
 				Yuetan Chu, Changchun Yang, Gongning Luo, Zhaowen Qiu, Xin Gao.
 				[<a href="https://link.springer.com/chapter/10.1007/978-3-031-72120-5_7" target="_blank">paper</a>]
-				[<a href="./papers/2024-02.pdf" target="_blank">Download</a>] <br>
+				[<a href="https://link.springer.com/chapter/10.1007/978-3-031-72120-5_7" target="_blank">Code</a>] <br>
 				<em> IEEE Transactions on Fuzzy Systems, 2024. <b>(JCR Q1 with Impact Factor: 5.4)</b></em>
 			</p>
 		</table>
@@ -193,27 +189,6 @@
 
 
 
-<!-- 代码 -->
-<tr>
-	<td width="5%"></td>
-	<td width="50%">
-		<div id="Code" class="contents">
-		<h2>Code:<a class='default-link' href="https://github.com/PerceptionComputingLab">[gitbub site]</a></h2>
-		<ul>
-		<li>
-			<span class='title'>AKF-Net: Anatomic-Kinetic Fusion Network for Pituitary Gland and Microadenoma Segmentation in Multi-phase DCE-MRI</span>
-			<a class="code" href="https://github.com/PerceptionComputingLab/AKF-Net">[Code]</a>
-				<!-- <br><span class="highlights">&nbsp&nbsp&nbsp&nbsp"Early Detection of Dementia through Retinal Imaging and Trustworthy AI", npj Digital Medicine, 2024.</span> -->
-		</li>		
-		
-		<li>
-			<span class='title'>AFLL</span>
-			<a class="code" href="https://github.com/PerceptionComputingLab/AFLL">[Code]</a>
-			<br><span class="highlights">"EAdjacency-aware Fuzzy Label Learning for Skin Disease Diagnosis",IEEE Transactions on Fuzzy Systems,2025.</span>
-		</li>
-		</ul>
-		</div>
-	<hr/>
 
 
 
@@ -221,67 +196,6 @@
 
 
 
-
-<!-- 成果 -->
-<tr>
-	<td width="5%"></td>
-	<td width="50%">
-		<div id="Results" class="contents">
-		<h2>Results</h2>
-		<a class="default-link" href="http://114.116.228.167/" target="_blank">Smart Medical Cloud Imaging Platform</a> 
-
-		<ul>
-		<li>
-			<span class='title'>Heart Online Modeling Platform: Our team took the lead in developing the "Heart Online Modeling Platform" for CTA imaging data, 
-								which has already been promoted and applied in several affiliated hospitals of Harbin Medical University.</span>
-			<a class="code" href="http://114.116.228.167/cardiac/">[Link]</a>
-				<!-- <br><span class="highlights">&nbsp&nbsp&nbsp&nbsp"Early Detection of Dementia through Retinal Imaging and Trustworthy AI", npj Digital Medicine, 2024.</span> -->
-			<div class="platform-image">
-				<img src="./Img/result image/1.png" 
-						alt="Heart Online Modeling Platform Screenshot" 
-						style="width: 80%; 
-								max-width: 800px; 
-								margin: 10px 0;
-								border: 1px solid #ddd;
-								border-radius: 4px;">
-			</div>
-		</li>
-				
-		
-		<li>
-			<span class='title'>COVID-19 Online Modeling and Quantitative Analysis Platform: The 24-hour real-time COVID-19 
-								online modeling and quantitative analysis service platform has provided over 500 
-								services to Zhangjiajie People's Hospital and the First Affiliated Hospital of Harbin Medical University.</span>
-			<a class="code" href="http://114.116.228.167/covid">[Link]</a>
-			<div class="platform-image">
-				<img src="./Img/result image/2.png" 
-						 alt="COVID-19 Online Modeling and Quantitative Analysis Platform" 
-						 style="width: 80%; 
-								max-width: 800px; 
-								margin: 10px 0;
-								border: 1px solid #ddd;
-								border-radius: 4px;">
-			</div>
-		</li>
-
-
-		<li>
-			<span class='title'>Ventricular Function Index Pre-Evaluation System.</span>
-			<a class="code" href="http://114.116.228.167/ventricle">[Link]</a>
-			<div class="platform-image">
-				<img src="./Img/result image/3.png" 
-				 		alt="Ventricular Function Index Pre-Evaluation System" 
-				 		style="width: 80%; 
-							max-width: 800px; 
-							margin: 10px 0;
-							border: 1px solid #ddd;
-							border-radius: 4px;">
-			</div>
-		</li>
-		</ul>
-		</div>
-		
-<hr/>
 
 <!-- 专利 -->
 <tr></tr>
@@ -315,7 +229,7 @@
             <table width="100%" border="0" align="center">					
                 <tr>
                     <td>
-                        <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=CK6-9MXCGsb7jLVXsNWyVkhV3nwwjeDqpMxj_HvBYBo&cl=ffffff&w=a"></script>
+                        <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=CK6-9MXCGsb7jLVXsNWyVkhV3nwwjeDqpMxj_HvBYBo"></script>
                     </td>
                 </tr>
             </table>
