--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	    Harbin Institute of Technology, <br>
 	    Harbin, Heilongjiang Province, China. </p>
     <p> <em> Email: <a href="mailto:luogongning@163.com">luogongning@163.com</a> </em> 
-	<p> <em> Wechat: <a href="">136 4744 9808</a> </em> </p>
+	<!-- <p> <em> Wechat: <a href="">136 4744 9808</a> </em> </p> -->
 </div>
 <!-- 照片 -->
 </td>
