--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
 			I completed my Bachelor's degree in Software Engineering from East China Jiaotong University in 2012.
 			I then received my Master's and Ph.D. degree in Computer Science and Technology at Harbin Institute of Technology in 2014 and 2019, respectively,
 			with Prof. Kuanquan Wang. During my doctoral studies, 
-			I was a joint Ph.D. student at Western University (2017-2018), mentored by Prof. Shuo Li. 
-I am also a visiting scientist at King Abdullah University of Science and Technology from 2023 to 2024, working closely with Professor Gao Xin.
+			I was a joint Ph.D. student at Western University (2017-2018), mentored by 
+		 <a class="default-link" href="https://case.edu/medicine/ccir/faculty/shuo-li" target="_blank">Prof. Shuo Li</a>. 
+I am also a visiting scientist at King Abdullah University of Science and Technology from 2023 to 2024, working closely with 
+		 <a class="default-link" href="https://cemse.kaust.edu.sa/profiles/xin-gao" target="_blank">Prof. Xin Gao</a>.
 		 My research interests include Multimodal Medical Image Analysis and Artificial Intelligence Technology.
         </p>
 	 <!-- Learn more about me, please check my <a href="./Rongchang_cv.pdf" target="_blank">CV</a>. -->
