--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
         <div id="header" style="float:left">
         <h1>Gongning Luo    骆功宁</h1>
         <p> Associate Professor, Ph.D/Master Supervisor </p>
-        <p> Room 306, Multifunctional Building, <br>
-            School of Computer Science and Technology, <br>
+        <p> School of Computer Science and Technology, <br>
 	    Harbin Institute of Technology, <br>
 	    Harbin, Heilongjiang Province, China. </p>
     <p> <em> Email: <a href="mailto:luogongning@163.com">luogongning@163.com</a> </em> 
@@ -47,7 +46,7 @@
          <p>I am now an Associate Professor and Ph.D./Master Supervisor at the School of Computer Science and Technology, at Harbin Institute of Technology. 
 			I completed my Bachelor's degree in Software Engineering from East China Jiaotong University in 2012.
 			I then received my Master's and Ph.D. degree in Computer Science and Technology at Harbin Institute of Technology in 2014 and 2019, respectively,
-			with Prof. Kuanquan Wang. During my doctoral studies, 
+			with <a class="default-link" href="https://homepage.hit.edu.cn/wangkuanquan" target="_blank">Prof. Kuanquan Wang</a>. During my doctoral studies, 
 			I was a joint Ph.D. student at Western University (2017-2018), mentored by 
 		 <a class="default-link" href="https://case.edu/medicine/ccir/faculty/shuo-li" target="_blank">Prof. Shuo Li</a>. 
 I am also a visiting scientist at King Abdullah University of Science and Technology from 2023 to 2024, working closely with 
