--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@ I am also a visiting scientist at King Abdullah University of Science and Techno
 		<p><table width="100%" border="0" align="center">					
 						
 				<td width="70%">
-					<p><b> Convergent–diffusion denoising model for multi-scenario CT image reconstruction. </b><br>
-							Xinghua Ma, Mingye Zou, Xinyan Fang,<U><b>Gongning Luo</U></b>, Wei Wang, Suyu Dong, Xiangyu Li, Kuanquan Wang, Qing Dong, Ye Tian, Shuo Li.
-					[<a href="https://www.sciencedirect.com/science/article/pii/S089561112400168X" target="_blank">paper</a>]
-					[<a href="https://www.sciencedirect.com/science/article/pii/S089561112400168X" target="_blank">code</a>] <br>
-					<em> Computerized Medical Imaging and Graphics, 2025. <b>(JCR Q1 with Impact Factor: 5.4)</b></em>
+					<p><b> Multi-views fusion CNN for left ventricular volumes estimation on cardiac MR images. </b><br>
+							<U><b>Gongning Luo</U></b>, Suyu Dong, Kuanquan Wang*, Wangmeng Zuo, Shaodong Cao, and Henggui Zhang.
+					[<a href="https://ieeexplore.ieee.org/abstract/document/8067513/" target="_blank">paper</a>]
+					[<a href="https://github.com/luogongning/Multi-views-fusion" target="_blank">code</a>] <br>
+					<em> <b>IEEE Transactions on Biomedical Engineering<b>, 2018. <b>(Top journals in the field)</b></em>
 				</td>
 			</table>
 			</p>
