--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ I am also a visiting scientist at King Abdullah University of Science and Techno
 							<U><b>Gongning Luo</U></b>, Suyu Dong, Kuanquan Wang*, Wangmeng Zuo, Shaodong Cao, and Henggui Zhang.
 					[<a href="https://ieeexplore.ieee.org/abstract/document/8067513/" target="_blank">paper</a>]
 					[<a href="https://github.com/luogongning/Multi-views-fusion" target="_blank">code</a>] <br>
-					<em> IEEE Transactions on Biomedical Engineering, 2018. <b>(Top journals in the field)</b></em>
+					<em> IEEE Transactions on Biomedical Engineering, 2018. <b>(Top journal in the field)</b></em>
 				</td>
 			</table>
 			</p>
