--- a/index.html
+++ b/index.html
@@ -121,8 +121,18 @@ I am also a visiting scientist at King Abdullah University of Science and Techno
 			</table>
 			</p>
 
-
-
+		<p><table width="100%" border="0" align="center">					
+						
+				<td width="70%">
+					<p><b> Trajectory-Aware Adaptive Imaging Clue Analysis for Guidewire Artifact Removal in Intravascular Optical Coherence Tomography. </b><br>
+							<U><b>Gongning Luo</U></b>, Xinghua Ma, Jinwen Guo, Mingye Zou, Wei Wang, Yang Cao, Kuanquan Wang, and Shuo Li.
+					[<a href="https://ieeexplore.ieee.org/abstract/document/10159446/" target="_blank">paper</a>]
+					[<a href="https://github.com/PerceptionComputingLab/TAC-Net" target="_blank">code</a>] <br>
+					<em> IEEE Journal of Biomedical and Health Informatics, 2023. <b>(Top journal in the field)</b></em>
+				</td>
+			</table>
+			</p>
+			
 			<p><table width="100%" border="0" align="center">					
 				<p><b> Meta learning for mutant HLA class I epitope immunogenicity prediction to accelerate cancer clinical immunotherapy. </b><br>
 						Long Xu, Qiang Yang, Weihe Dong, Xiaokun Li, Kuanquan Wang, Suyu Dong, Xianyu Zhang, Tiansong Yang, <U><b>Gongning Luo*</U></b>, Xingyu Liao, Xin Gao, Guohua Wang.
