--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			with <a class="default-link" href="https://homepage.hit.edu.cn/wangkuanquan" target="_blank">Prof. Kuanquan Wang</a>. During my doctoral studies, 
 			I was a joint Ph.D. student at Western University (2017-2018), mentored by 
 		 <a class="default-link" href="https://case.edu/medicine/ccir/faculty/shuo-li" target="_blank">Prof. Shuo Li</a>. 
-I am also a visiting scientist at King Abdullah University of Science and Technology from 2023 to 2024, working closely with 
+I am also a senior scientist at King Abdullah University of Science and Technology from 2023 to 2024, working closely with 
 		 <a class="default-link" href="https://cemse.kaust.edu.sa/profiles/xin-gao" target="_blank">Prof. Xin Gao</a> and  <a class="default-link" href="https://homepage.hit.edu.cn/wangguohua?lang=zh" target="_blank">Prof. Guohua Wang</a>.
 		 My research interests include Multimodal Medical Image Analysis and Artificial Intelligence Technology.
         </p>
