--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ I am also a senior scientist at King Abdullah University of Science and Technolo
 .					
 					[<a href="https://arxiv.org/abs/2404.07671v2" target="_blank">paper</a>]
 					[<a href="https://github.com/Arturia-Pendragon-Iris/HiPaS_AV_Segmentation" target="_blank">code</a>] <br>
-					<em> <b>Nature Communications</b>, 2025. <b>(Top Journal in the field; IF>10)</b></em> <b style="color: red;">(First explanation of the difference in vascular abundance between men and women, overturning traditional anatomical cognition)</b>
+					<em> <b>Nature Communications</b>, 2025. <b>(Top Journal in the field; IF>10)</b></em> <b style="color: red;">(The first explanation of the difference in vascular abundance between men and women, overturning traditional anatomical cognition)</b>
 				</td>
 			</table>
 			</p>			
